@@ -1,66 +1,78 @@
 package com.example.serviciousuario.controller;
-/*
+
 import static org.mockito.Mockito.when;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
-import org.hamcrest.Matchers;
 import org.junit.jupiter.api.Test;
+
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.context.annotation.Import;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
-import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 
 import com.example.serviciousuario.model.Usuario;
-import com.example.serviciousuario.service.UsuarioServicelmpl;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import com.example.serviciousuario.service.AuthService;
+import com.example.serviciousuario.service.RolesService;
+import com.example.serviciousuario.service.UsuarioService;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 
 @WebMvcTest(UsuarioController.class)
+@AutoConfigureMockMvc(addFilters = false)
+@Import({UsuarioService.class, RolesService.class, AuthService.class})
 public class UsuarioControllerTest {
-
-    private static final Logger log = LoggerFactory.getLogger(UsuarioControllerTest.class);
 
     @Autowired
     private MockMvc mockMvc;
 
     @MockBean
-    private UsuarioServicelmpl usuarioServiceMock;
+    private UsuarioService usuarioServiceMock;
 
+    @MockBean
+    private RolesService rolesServiceMock;
+
+    @MockBean
+    private AuthService authServiceMock;
 
     @Test
-    public void obtenerTodosTest() throws Exception {
+    public void ObtenerTodosTest() throws Exception {
         
         Usuario usuario1 = new Usuario();
         usuario1.setId(1L);
-        usuario1.setNombre("Andrea Miranda");
-        usuario1.setRut("12345678-9");
-        usuario1.setDireccion("Rio boroa 1744");
-        usuario1.setComuna("Cerro navia");
-        usuario1.setRol(null);       
+        usuario1.setNombre("Andrea Miranda");           
 
         Usuario usuario2 = new Usuario();
-        usuario1.setId(2L);
-        usuario1.setNombre("Juan Perez");
-        usuario1.setRut("19876543-9");
-        usuario1.setDireccion("Rio boroa 1746");
-        usuario1.setComuna("Cerro navia");
-        usuario1.setRol(null);
-        List<Usuario> usuarios = Arrays.asList(usuario1, usuario2);
+        usuario2.setId(2L);
+        usuario2.setNombre("Jose Pablo");
+        List<Usuario> usuarios = List.of(usuario1, usuario2);
+    
         when(usuarioServiceMock.getAllUsuario()).thenReturn(usuarios);
 
-        log.info("Testing obtenerTodosTest: starting test with {} usuarios", usuarios.size());
+        mockMvc.perform(get("/usuario"))
+         .andExpect(status().isOk())
+         .andExpect(jsonPath("$._embedded.usuarioList[0].id").value(1))
+         .andExpect(jsonPath("$._embedded.usuarioList[0].nombre").value("Andrea Miranda"))
+         .andExpect(jsonPath("$._embedded.usuarioList[1].id").value(2))
+         .andExpect(jsonPath("$._embedded.usuarioList[1].nombre").value("Jose Pablo"));
 
-        mockMvc.perform(MockMvcRequestBuilders.get("/usuario"))
-               .andExpect(MockMvcResultMatchers.status().isOk())
-               .andExpect(MockMvcResultMatchers.jsonPath("$", Matchers.hasSize(2)))
-               .andExpect(MockMvcResultMatchers.jsonPath("$[0].nombre", Matchers.is("Andrea Miranda")))
-               .andExpect(MockMvcResultMatchers.jsonPath("$[1].nombre", Matchers.is("Jose Pablo")));
-
-        log.info("Testing obtenerTodosTest: test completed successfully");
     }
+
+    @Test
+    public void ObtenerUsuarioError() throws Exception {
+        Long userId = 1L;
+        when(usuarioServiceMock.getUsuarioById(userId)).thenReturn(Optional.empty());
+
+        mockMvc.perform(get("/usuario/" + userId))
+                .andExpect(status().isNotFound())
+                .andExpect(content().string("Usuario no encontrado"));
+    }
+
 }
-*/
+
